--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<meta http-equiv="refresh" content="0; url=http://ttu-csc.github.io/docs/2015/05/14/labs-overview.html" />
+
 <div class="home">
 
   <h1 class="page-heading">Documentation</h1>
